<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BSCPRO</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="title_activity_group_oruser_chat">GroupORUserChat</string>
    <string name="title_activity_all__user__list_">All_User_List_Activity</string>
    <string name="title_activity_bpm__ckeck__in_">BPM_Ckeck_In_Activity</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Android Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">GCM: device successfully registered!</string>
    <string name="gcm_unregistered">GCM: device successfully unregistered!</string>
    <string name="gcm_message">GCM: you got message!</string>
    <string name="gcm_error">GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">Demo Server: successfully added device!</string>
    <string name="server_unregistered">Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="icon_newrecrut">&#xf0b0;</string>
    <string name="icon_chat">&#xf086;</string>
    <string name="icon_addbussiness">&#xf007;</string>
    <string name="icon_matchup">&#xf02d;</string>
    <string name="icon_bpm">&#xf022;</string>
    <string name="icon_guest">&#xf13d;</string>
    <string name="icon_logout">&#xf011;</string>
    <string name="icon_dashboard">&#xf0e4;</string>
    <string name="icon_BACKBTN">&#xf060;</string>
     <string name="icon_LOCK">&#xf13e;</string>
      <string name="icon_PLUSBUTTON">&#xf067;</string>
    <string name="title_activity_dashboard_">Dashboard_Activity</string>

</resources>
